{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 124,
  "lineage": "a162f147-25a4-ba72-af7f-fd2514dc4032",
  "resources": [
    {
      "module": "module.EC2_module_1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed05376b59b90e46",
            "arn": "arn:aws:ec2:us-west-1:294018553114:instance/i-09cedeaf0f2ff3524",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09cedeaf0f2ff3524",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01906b64652674bec",
            "private_dns": "ip-10-0-3-50.us-west-1.compute.internal",
            "private_ip": "10.0.3.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03c9599a42558d2f0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0f081b39b928ee0bb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c4d19ac6d5c37f0a",
            "tags": {
              "Name": "hossam-env1-ec1"
            },
            "tags_all": {
              "Name": "hossam-env1-ec1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f081b39b928ee0bb"
            ]
          },
          "dependencies": [
            "module.security_module_1.aws_security_group.EC2",
            "module.subnet_module_1.aws_subnet.private1"
          ]
        }
      ]
    },
    {
      "module": "module.EC2_module_1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ed05376b59b90e46",
            "arn": "arn:aws:ec2:us-west-1:294018553114:instance/i-09e3d16dfa79a5b74",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e3d16dfa79a5b74",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-04ec9608122761d75",
            "private_dns": "ip-10-0-4-50.us-west-1.compute.internal",
            "private_ip": "10.0.4.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0980ed9a69bf5f682",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0f081b39b928ee0bb"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-049d112a03d195d12",
            "tags": {
              "Name": "hossam-env1-ec2"
            },
            "tags_all": {
              "Name": "hossam-env1-ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f081b39b928ee0bb"
            ]
          },
          "dependencies": [
            "module.security_module_1.aws_security_group.EC2",
            "module.subnet_module_1.aws_subnet.private2"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module_1",
      "mode": "managed",
      "type": "aws_lb",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:294018553114:loadbalancer/app/test-lb-tf/91f8516ba82c50cf",
            "arn_suffix": "app/test-lb-tf/91f8516ba82c50cf",
            "dns_name": "test-lb-tf-1032222459.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-1:294018553114:loadbalancer/app/test-lb-tf/91f8516ba82c50cf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "test-lb-tf",
            "security_groups": [
              "sg-0e90b8203432f2a02"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05c2466549a3feb3b"
              },
              {
                "subnet_id": "subnet-0e2b2cfceee64a251"
              }
            ],
            "subnets": [
              "subnet-05c2466549a3feb3b",
              "subnet-0e2b2cfceee64a251"
            ],
            "tags": {
              "Name": "hossam-env1-lb"
            },
            "tags_all": {
              "Name": "hossam-env1-lb"
            },
            "vpc_id": "vpc-0f08c513f5b3e187a",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "module.security_module_1.aws_security_group.ALB",
            "module.subnet_module_1.aws_subnet.public1",
            "module.subnet_module_1.aws_subnet.public2",
            "module.vpc_module_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module_1",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:294018553114:listener/app/test-lb-tf/91f8516ba82c50cf/4f8e1b20afcb524a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:294018553114:targetgroup/tf-example-lb-tg/a2cf55f8741bcaa4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:294018553114:listener/app/test-lb-tf/91f8516ba82c50cf/4f8e1b20afcb524a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:294018553114:loadbalancer/app/test-lb-tf/91f8516ba82c50cf",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet_module_1.aws_subnet.public1",
            "module.subnet_module_1.aws_subnet.public2",
            "module.vpc_module_1.aws_vpc.main",
            "module.loadbalancer_module_1.aws_lb.test",
            "module.loadbalancer_module_1.aws_lb_target_group.test",
            "module.security_module_1.aws_security_group.ALB"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module_1",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:294018553114:targetgroup/tf-example-lb-tg/a2cf55f8741bcaa4",
            "arn_suffix": "targetgroup/tf-example-lb-tg/a2cf55f8741bcaa4",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:294018553114:targetgroup/tf-example-lb-tg/a2cf55f8741bcaa4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0f08c513f5b3e187a"
          },
          "dependencies": [
            "module.vpc_module_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module_1",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:294018553114:targetgroup/tf-example-lb-tg/a2cf55f8741bcaa4-20210728012305304700000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:294018553114:targetgroup/tf-example-lb-tg/a2cf55f8741bcaa4",
            "target_id": "i-09cedeaf0f2ff3524"
          },
          "dependencies": [
            "module.EC2_module_1.aws_instance.web1",
            "module.loadbalancer_module_1.aws_lb_target_group.test",
            "module.security_module_1.aws_security_group.EC2",
            "module.subnet_module_1.aws_subnet.private1"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_module_1",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:294018553114:targetgroup/tf-example-lb-tg/a2cf55f8741bcaa4-20210728012335707700000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:294018553114:targetgroup/tf-example-lb-tg/a2cf55f8741bcaa4",
            "target_id": "i-09e3d16dfa79a5b74"
          },
          "dependencies": [
            "module.EC2_module_1.aws_instance.web2",
            "module.loadbalancer_module_1.aws_lb_target_group.test",
            "module.security_module_1.aws_security_group.EC2",
            "module.subnet_module_1.aws_subnet.private2"
          ]
        }
      ]
    },
    {
      "module": "module.routes_module_1",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-053d3699f926e1c68",
            "domain": "vpc",
            "id": "eipalloc-7722e978",
            "network_border_group": "us-west-1",
            "network_interface": "eni-051209da17a5d1c74",
            "private_dns": "ip-10-0-10-206.us-west-1.compute.internal",
            "private_ip": "10.0.10.206",
            "public_dns": "ec2-18-144-179-95.us-west-1.compute.amazonaws.com",
            "public_ip": "18.144.179.95",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.routes_module_1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294018553114:internet-gateway/igw-09192d5fd429a2bb3",
            "id": "igw-09192d5fd429a2bb3",
            "owner_id": "294018553114",
            "tags": {
              "Name": "hossam-env1-vpc-gw"
            },
            "tags_all": {
              "Name": "hossam-env1-vpc-gw"
            },
            "vpc_id": "vpc-0f08c513f5b3e187a"
          },
          "dependencies": [
            "module.vpc_module_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routes_module_1",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-7722e978",
            "connectivity_type": "public",
            "id": "nat-03ca79c33fdbd59dc",
            "network_interface_id": "eni-051209da17a5d1c74",
            "private_ip": "10.0.10.206",
            "public_ip": "18.144.179.95",
            "subnet_id": "subnet-0e2b2cfceee64a251",
            "tags": {
              "Name": "hossam-env1-vpc-nat"
            },
            "tags_all": {
              "Name": "hossam-env1-vpc-nat"
            }
          },
          "dependencies": [
            "module.vpc_module_1.aws_vpc.main",
            "module.routes_module_1.aws_eip.nat_ip",
            "module.subnet_module_1.aws_subnet.public1"
          ]
        }
      ]
    },
    {
      "module": "module.routes_module_1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294018553114:route-table/rtb-06046ca3f3fad5c15",
            "id": "rtb-06046ca3f3fad5c15",
            "owner_id": "294018553114",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03ca79c33fdbd59dc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hossam-env1-vpc-private"
            },
            "tags_all": {
              "Name": "hossam-env1-vpc-private"
            },
            "vpc_id": "vpc-0f08c513f5b3e187a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.routes_module_1.aws_nat_gateway.nat",
            "module.subnet_module_1.aws_subnet.public1",
            "module.vpc_module_1.aws_vpc.main",
            "module.routes_module_1.aws_eip.nat_ip"
          ]
        }
      ]
    },
    {
      "module": "module.routes_module_1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294018553114:route-table/rtb-05f273bcf912baeba",
            "id": "rtb-05f273bcf912baeba",
            "owner_id": "294018553114",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "hossam-env1-vpc-private"
            },
            "tags_all": {
              "Name": "hossam-env1-vpc-private"
            },
            "vpc_id": "vpc-0f08c513f5b3e187a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routes_module_1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294018553114:route-table/rtb-0f4024cb0d81f7ce4",
            "id": "rtb-0f4024cb0d81f7ce4",
            "owner_id": "294018553114",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "hossam-env1-vpc-private"
            },
            "tags_all": {
              "Name": "hossam-env1-vpc-private"
            },
            "vpc_id": "vpc-0f08c513f5b3e187a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routes_module_1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294018553114:route-table/rtb-070e2310eea982f6e",
            "id": "rtb-070e2310eea982f6e",
            "owner_id": "294018553114",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09192d5fd429a2bb3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hossam-env1-vpc-public"
            },
            "tags_all": {
              "Name": "hossam-env1-vpc-public"
            },
            "vpc_id": "vpc-0f08c513f5b3e187a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.routes_module_1.aws_internet_gateway.gw",
            "module.vpc_module_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routes_module_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09bbe69843b9cad3a",
            "route_table_id": "rtb-06046ca3f3fad5c15",
            "subnet_id": "subnet-0c4d19ac6d5c37f0a"
          },
          "dependencies": [
            "module.subnet_module_1.aws_subnet.public1",
            "module.vpc_module_1.aws_vpc.main",
            "module.routes_module_1.aws_eip.nat_ip",
            "module.routes_module_1.aws_nat_gateway.nat",
            "module.routes_module_1.aws_route_table.private1",
            "module.subnet_module_1.aws_subnet.private1"
          ]
        }
      ]
    },
    {
      "module": "module.routes_module_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed84ac712632e6ed",
            "route_table_id": "rtb-06046ca3f3fad5c15",
            "subnet_id": "subnet-049d112a03d195d12"
          },
          "dependencies": [
            "module.routes_module_1.aws_route_table.private1",
            "module.subnet_module_1.aws_subnet.private2",
            "module.subnet_module_1.aws_subnet.public1",
            "module.vpc_module_1.aws_vpc.main",
            "module.routes_module_1.aws_eip.nat_ip",
            "module.routes_module_1.aws_nat_gateway.nat"
          ]
        }
      ]
    },
    {
      "module": "module.routes_module_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bb123bce6701fe7",
            "route_table_id": "rtb-05f273bcf912baeba",
            "subnet_id": "subnet-04f1d0dc91c8a1ec0"
          },
          "dependencies": [
            "module.routes_module_1.aws_route_table.private2",
            "module.subnet_module_1.aws_subnet.private3",
            "module.vpc_module_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routes_module_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6146b00d150d08b",
            "route_table_id": "rtb-05f273bcf912baeba",
            "subnet_id": "subnet-0c7b192d12331a059"
          },
          "dependencies": [
            "module.routes_module_1.aws_route_table.private2",
            "module.subnet_module_1.aws_subnet.private4",
            "module.vpc_module_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routes_module_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0781879e9af7e5d7f",
            "route_table_id": "rtb-0f4024cb0d81f7ce4",
            "subnet_id": "subnet-0facbba625a0ad8a2"
          },
          "dependencies": [
            "module.routes_module_1.aws_route_table.private3",
            "module.subnet_module_1.aws_subnet.private5",
            "module.vpc_module_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routes_module_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "f",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d883d1d8d7fcf879",
            "route_table_id": "rtb-0f4024cb0d81f7ce4",
            "subnet_id": "subnet-06fed920eb1fee8c4"
          },
          "dependencies": [
            "module.routes_module_1.aws_route_table.private3",
            "module.subnet_module_1.aws_subnet.private6",
            "module.vpc_module_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routes_module_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "g",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8e07364ea8efa46",
            "route_table_id": "rtb-070e2310eea982f6e",
            "subnet_id": "subnet-0e2b2cfceee64a251"
          },
          "dependencies": [
            "module.routes_module_1.aws_internet_gateway.gw",
            "module.routes_module_1.aws_route_table.public1",
            "module.subnet_module_1.aws_subnet.public1",
            "module.vpc_module_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routes_module_1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "h",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8e07364ea8efa46",
            "route_table_id": "rtb-070e2310eea982f6e",
            "subnet_id": "subnet-0e2b2cfceee64a251"
          },
          "dependencies": [
            "module.routes_module_1.aws_internet_gateway.gw",
            "module.routes_module_1.aws_route_table.public1",
            "module.subnet_module_1.aws_subnet.public1",
            "module.vpc_module_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_module_1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ALB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294018553114:security-group/sg-0e90b8203432f2a02",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e90b8203432f2a02",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ALB",
            "name_prefix": "",
            "owner_id": "294018553114",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hossam-env1-alb"
            },
            "tags_all": {
              "Name": "hossam-env1-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f08c513f5b3e187a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_module_1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294018553114:security-group/sg-0f081b39b928ee0bb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f081b39b928ee0bb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e90b8203432f2a02"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "EC2",
            "name_prefix": "",
            "owner_id": "294018553114",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hossam-env1-ec2"
            },
            "tags_all": {
              "Name": "hossam-env1-ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f08c513f5b3e187a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_module_1.aws_security_group.ALB",
            "module.vpc_module_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_module_1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "RDS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294018553114:security-group/sg-00050112eca7cf028",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00050112eca7cf028",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TLS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f081b39b928ee0bb"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "RDS",
            "name_prefix": "",
            "owner_id": "294018553114",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hossam-env1-rds"
            },
            "tags_all": {
              "Name": "hossam-env1-rds"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f08c513f5b3e187a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_module_1.aws_security_group.ALB",
            "module.security_module_1.aws_security_group.EC2",
            "module.vpc_module_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294018553114:subnet/subnet-0c4d19ac6d5c37f0a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0c4d19ac6d5c37f0a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294018553114",
            "tags": {
              "Name": "hossam-env1-vpc"
            },
            "tags_all": {
              "Name": "hossam-env1-vpc"
            },
            "vpc_id": "vpc-0f08c513f5b3e187a"
          },
          "dependencies": [
            "module.vpc_module_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294018553114:subnet/subnet-049d112a03d195d12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-049d112a03d195d12",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294018553114",
            "tags": {
              "Name": "hossam-env1-vpc"
            },
            "tags_all": {
              "Name": "hossam-env1-vpc"
            },
            "vpc_id": "vpc-0f08c513f5b3e187a"
          },
          "dependencies": [
            "module.vpc_module_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294018553114:subnet/subnet-04f1d0dc91c8a1ec0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-04f1d0dc91c8a1ec0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294018553114",
            "tags": {
              "Name": "hossam-env1-vpc"
            },
            "tags_all": {
              "Name": "hossam-env1-vpc"
            },
            "vpc_id": "vpc-0f08c513f5b3e187a"
          },
          "dependencies": [
            "module.vpc_module_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294018553114:subnet/subnet-0c7b192d12331a059",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0c7b192d12331a059",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294018553114",
            "tags": {
              "Name": "hossam-env1-vpc"
            },
            "tags_all": {
              "Name": "hossam-env1-vpc"
            },
            "vpc_id": "vpc-0f08c513f5b3e187a"
          },
          "dependencies": [
            "module.vpc_module_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294018553114:subnet/subnet-0facbba625a0ad8a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-0facbba625a0ad8a2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294018553114",
            "tags": {
              "Name": "hossam-env1-vpc"
            },
            "tags_all": {
              "Name": "hossam-env1-vpc"
            },
            "vpc_id": "vpc-0f08c513f5b3e187a"
          },
          "dependencies": [
            "module.vpc_module_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294018553114:subnet/subnet-06fed920eb1fee8c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-06fed920eb1fee8c4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294018553114",
            "tags": {
              "Name": "hossam-env1-vpc"
            },
            "tags_all": {
              "Name": "hossam-env1-vpc"
            },
            "vpc_id": "vpc-0f08c513f5b3e187a"
          },
          "dependencies": [
            "module.vpc_module_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294018553114:subnet/subnet-0e2b2cfceee64a251",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0e2b2cfceee64a251",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294018553114",
            "tags": {
              "Name": "hossam-env1-vpc"
            },
            "tags_all": {
              "Name": "hossam-env1-vpc"
            },
            "vpc_id": "vpc-0f08c513f5b3e187a"
          },
          "dependencies": [
            "module.vpc_module_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_module_1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294018553114:subnet/subnet-05c2466549a3feb3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.9.0/24",
            "id": "subnet-05c2466549a3feb3b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294018553114",
            "tags": {
              "Name": "hossam-env1-vpc"
            },
            "tags_all": {
              "Name": "hossam-env1-vpc"
            },
            "vpc_id": "vpc-0f08c513f5b3e187a"
          },
          "dependencies": [
            "module.vpc_module_1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module_1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:294018553114:vpc/vpc-0f08c513f5b3e187a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03391b91d716323fb",
            "default_route_table_id": "rtb-07f7784727a3f07e3",
            "default_security_group_id": "sg-021fc1d5256337bf9",
            "dhcp_options_id": "dopt-51964a37",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f08c513f5b3e187a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07f7784727a3f07e3",
            "owner_id": "294018553114",
            "tags": {
              "Name": "hossam-env1-vpc"
            },
            "tags_all": {
              "Name": "hossam-env1-vpc"
            }
          }
        }
      ]
    }
  ]
}